# henix

./: Cargo.toml  README.md  flake.nix
docs/: devnotes.md
src/: deploy.rs  lib.rs  main.rs  nix.rs  ssh.rs  util.rs
tests/: common.rs  container.dockerfile
