[package]
name = "henix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
openssh = "0.8.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
tracing-test = "0.1"
rand = "0.8.4"
